--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
           <div class="nav__menu" id="navMenu">
             <a class="nav__link" href="#divisiones">Divisiones</a>
             <a class="nav__link" href="#soluciones">Soluciones</a>
-            <a class="nav__link" href="#blog">Blog</a>
-            <a class="nav__link" href="#redesociales">Redes Sociales</a>
+            <a
+              class="nav__link"
+              href="https://blog.boxfox1.com"
+              target="_blank"
+              rel="noopener"
+              >Blog</a
+            >
+            <a class="nav__link" href="#redes-sociales">Redes Sociales</a>
             <a class="nav__link" href="#contacto">Contacto</a>
 
             <div class="nav__tools">
@@ -112,7 +118,7 @@
             </p>
 
             <div class="hero__cta">
-              <a class="btn btn--primary" href="nosotros.html">Ir a Nosotros</a>
+              <a class="btn btn--primary" href="#nosotros">Ir a Nosotros</a>
               <a class="btn btn--outline" href="#divisiones">Ver Divisiones</a>
             </div>
           </div>
@@ -468,6 +474,7 @@
       <!-- 5) REDES -->
       <section
         class="section section--dark"
+        id="redes-sociales"
         aria-label="Redes sociales Boxfox1"
       >
         <div class="container social">
@@ -789,8 +796,9 @@
     <footer class="footer" aria-label="Pie de página">
       <div class="container footer__grid">
         <!-- 1) NOSOTROS — Quiénes somos -->
-        <div class="footer__col">
+        <div class="footer__col" id="nosotros">
           <div class="footer__title">Nosotros</div>
+
           <div class="footer__lead">
             Ecosistema de operación + cumplimiento + digital.
           </div>
