--- a/index.html
+++ b/index.html
@@ -464,9 +464,14 @@
           </div>
 
           <div class="banner__cta">
-            <a class="btn btn--outline" href="prehispanico.html"
-              >Explorar identidad →</a
-            >
+<a class="btn btn--outline"
+   href="https://prehispanico.boxfox1.com"
+   target="_blank"
+   rel="noopener"
+   aria-label="Explorar identidad académica Boxfox1">
+   Explorar identidad académica →
+</a>
+
           </div>
         </div>
       </section>
