--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@
 
             <div class="nav__tools">
               <!-- EN link (ajusta ruta si tu inglés vive en /en/) -->
-              <a
-                class="btn btn--ghost"
-                href="en/index.html"
-                lang="en"
-                aria-label="View in English"
-              >
+<a class="btn btn--ghost" href="/en/" lang="en" aria-label="View in English">EN</a>
+
                 EN
               </a>
             </div>
@@ -469,7 +465,7 @@
    target="_blank"
    rel="noopener"
    aria-label="Explorar identidad académica Boxfox1">
-   Explorar identidad académica →
+   Saber más →
 </a>
 
           </div>
