--- a/en/index.html
+++ b/en/index.html
@@ -77,7 +77,7 @@
 
           <div class="nav__menu" id="navMenu">
             <!-- IDs stay the same as ES for CSS/anchors consistency -->
-            <a class="nav__link" href="#divisiones">Divisions</a>
+            <a class="nav__link" href="#divisions">Divisions</a>
             <a class="nav__link" href="#soluciones">Solutions</a>
 
             <a
@@ -125,7 +125,7 @@
 
             <div class="hero__cta">
               <a class="btn btn--primary" href="#nosotros">About us</a>
-              <a class="btn btn--outline" href="#divisiones">View divisions</a>
+              <a class="btn btn--outline" href="#divisions">View divisions</a>
             </div>
           </div>
 
@@ -210,13 +210,13 @@
       </section>
 
       <!-- 2) DIVISIONS -->
-      <section class="section" id="divisiones" aria-label="Boxfox1 divisions">
+      <section class="section" id="divisions" aria-label="Boxfox1 Divisions">
         <div class="container">
           <header class="section__head">
             <h2 class="section__title">Divisions</h2>
             <p class="section__sub">
-              Specialized units connected by one vision: professional execution
-              and clear deliverables.
+              Specialized units aligned under one vision: professional execution
+              and clearly defined deliverables.
             </p>
           </header>
 
@@ -230,15 +230,15 @@
               <img
                 class="card__img"
                 src="../assets/img/div-instituto.webp"
-                alt="Boxfox1 Institute (placeholder)"
+                alt="Boxfox1 Commercial Services Division"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
-                <h3 class="card__title">Commercial Training</h3>
+                <h3 class="card__title">Commercial Services</h3>
                 <p class="card__text">
-                  Training and certification with a regulatory and professional
-                  focus.
+                  Certification programs, specialized training, and regulatory
+                  solutions tailored for commercial and service industries.
                 </p>
                 <span class="card__cta">Explore →</span>
               </div>
@@ -253,16 +253,18 @@
               <img
                 class="card__img"
                 src="../assets/img/div-servicios.webp"
-                alt="Boxfox1 Industrial Services (placeholder)"
+                alt="Boxfox1 Industrial Services Division"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
                 <h3 class="card__title">Industrial Services</h3>
                 <p class="card__text">
-                  STPS standards, emergency brigades, DC-3, consulting and
-                  industrial operations.
+                  STPS (Mexican Ministry of Labor) compliance, multifunctional
+                  brigades, DC-3 certification, and technical consulting for
+                  structured, auditable industrial operations.
                 </p>
+
                 <span class="card__cta">Explore →</span>
               </div>
             </a>
@@ -276,14 +278,16 @@
               <img
                 class="card__img"
                 src="../assets/img/div-web.webp"
-                alt="Boxfox1 Web (placeholder)"
+                alt="Boxfox1 Software and Web Division"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
-                <h3 class="card__title">Web Development & SEO</h3>
+                <h3 class="card__title">Software & Web</h3>
                 <p class="card__text">
-                  Design, development, and digital solutions for businesses.
+                  Web architecture, system development, and digital positioning
+                  strategies focused on measurable growth and conversion
+                  performance.
                 </p>
                 <span class="card__cta">Explore →</span>
               </div>
@@ -291,21 +295,23 @@
 
             <a
               class="card"
-              href="https://academy.boxfox1.com"
+              href="https://capacitacion.boxfox1.com"
               target="_blank"
               rel="noopener"
             >
               <img
                 class="card__img"
                 src="../assets/img/div-academy.webp"
-                alt="Boxfox1 Academy (placeholder)"
+                alt="Boxfox1 Virtual Training Division"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
-                <h3 class="card__title">Online Training</h3>
+                <h3 class="card__title">Virtual Training</h3>
                 <p class="card__text">
-                  Continuous learning and specialized resources (coming soon).
+                  Online training programs, structured evaluation processes and
+                  certificate issuance focused on compliance and practical
+                  execution.
                 </p>
                 <span class="card__cta">Explore →</span>
               </div>
@@ -320,15 +326,63 @@
               <img
                 class="card__img"
                 src="../assets/img/div-hub.webp"
-                alt="Boxfox1 Hub (placeholder)"
+                alt="Boxfox1 Resource Center Division"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
                 <h3 class="card__title">Resource Center</h3>
                 <p class="card__text">
-                  Templates, checklists and downloadable tools across the
-                  Boxfox1 ecosystem.
+                  Technical templates, operational checklists, and downloadable
+                  tools designed to standardize processes and improve
+                  performance.
+                </p>
+                <span class="card__cta">Explore →</span>
+              </div>
+            </a>
+
+            <a
+              class="card"
+              href="https://maquinados.boxfox1.com"
+              target="_blank"
+              rel="noopener"
+            >
+              <img
+                class="card__img"
+                src="../assets/img/div-maquinados.webp"
+                alt="Boxfox1 Specialized Machining Division"
+                loading="lazy"
+                decoding="async"
+              />
+              <div class="card__body">
+                <h3 class="card__title">Specialized Machining</h3>
+                <p class="card__text">
+                  CNC precision parts, adjustments and prototyping with focus on
+                  critical tolerances and industrial quality control.
+                </p>
+                <span class="card__cta">Explore →</span>
+              </div>
+            </a>
+
+            <a
+              class="card"
+              href="https://imprenta.boxfox1.com"
+              target="_blank"
+              rel="noopener"
+            >
+              <img
+                class="card__img"
+                src="../assets/img/div-imprenta.webp"
+                alt="Boxfox1 Industrial Printing Division"
+                loading="lazy"
+                decoding="async"
+              />
+              <div class="card__body">
+                <h3 class="card__title">Printing</h3>
+                <p class="card__text">
+                  Industrial signage, operational formats and technical
+                  materials engineered for plant standardization and process
+                  control.
                 </p>
                 <span class="card__cta">Explore →</span>
               </div>
