--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
               <div class="card__body">
                 <h3 class="card__title">Servicios Comerciales</h3>
                 <p class="card__text">
-                  Capacitación y certificación con enfoque normativo y
-                  profesional.
+                  Programas de certificación, formación especializada y soluciones normativas para sector comercial y de servicios.
                 </p>
                 <span class="card__cta">Explorar →</span>
               </div>
@@ -252,9 +251,9 @@
               />
               <div class="card__body">
                 <h3 class="card__title">Servicios Industriales</h3>
-                <p class="card__text">
-                  STPS, brigadas, DC-3, consultoría y operación industrial.
-                </p>
+<p class="card__text">
+Cumplimiento STPS, brigadas multifuncionales, DC-3 y consultoría técnica para operación industrial estructurada y auditable.
+</p>
                 <span class="card__cta">Explorar →</span>
               </div>
             </a>
@@ -273,32 +272,34 @@
                 decoding="async"
               />
               <div class="card__body">
-                <h3 class="card__title">Desarrollo Web & SEO</h3>
-                <p class="card__text">
-                  Diseño, desarrollo y soluciones digitales para empresas.
-                </p>
+                <h3 class="card__title">Software & Web</h3>
+<p class="card__text">
+Arquitectura web, desarrollo de sistemas y posicionamiento digital orientado a conversión y resultados medibles.
+</p>
+
                 <span class="card__cta">Explorar →</span>
               </div>
             </a>
 
             <a
               class="card"
-              href="https://academy.boxfox1.com"
+              href="https://capacitacion.boxfox1.com"
               target="_blank"
               rel="noopener"
             >
               <img
                 class="card__img"
                 src="assets/img/div-academy.webp"
-                alt="Imagen de Boxfox1 Academy (sustituir)"
+                alt="Imagen de Boxfox1 Capacitación"
                 loading="lazy"
                 decoding="async"
               />
               <div class="card__body">
                 <h3 class="card__title">Capacitación Virtual</h3>
-                <p class="card__text">
-                  Formación continua y recursos especializados (próximamente).
-                </p>
+<p class="card__text">
+Programas de formación online, evaluación estructurada y emisión de constancias con enfoque en cumplimiento y ejecución práctica.
+</p>
+
                 <span class="card__cta">Explorar →</span>
               </div>
             </a>
@@ -318,13 +319,59 @@
               />
               <div class="card__body">
                 <h3 class="card__title">Centro de Recursos</h3>
-                <p class="card__text">
-                  Recursos, plantillas, checklists y herramientas descargables
-                  del ecosistema Boxfox1.
-                </p>
+<p class="card__text">
+Plantillas técnicas, checklists operativos y herramientas descargables diseñadas para estandarizar procesos y mejorar desempeño.
+</p>
+
                 <span class="card__cta">Explorar →</span>
               </div>
             </a>
+            <a
+  class="card"
+  href="https://maquinados.boxfox1.com"
+  target="_blank"
+  rel="noopener"
+>
+  <img
+    class="card__img"
+    src="assets/img/div-maquinados.webp"
+    alt="Imagen de Maquinados Especializados Boxfox1"
+    loading="lazy"
+    decoding="async"
+  />
+  <div class="card__body">
+    <h3 class="card__title">Maquinados Especializados</h3>
+<p class="card__text">
+Fabricación de piezas, ajustes y prototipos con precisión CNC, enfoque en tolerancias críticas y control de calidad industrial.
+</p>
+
+    <span class="card__cta">Explorar →</span>
+  </div>
+</a>
+<a
+  class="card"
+  href="https://imprenta.boxfox1.com"
+  target="_blank"
+  rel="noopener"
+>
+  <img
+    class="card__img"
+    src="assets/img/div-imprenta.webp"
+    alt="Imagen de Imprenta Industrial Boxfox1"
+    loading="lazy"
+    decoding="async"
+  />
+  <div class="card__body">
+    <h3 class="card__title">Imprenta</h3>
+<p class="card__text">
+Señalización industrial, formatos operativos y materiales técnicos diseñados para estandarización y control en planta.
+</p>
+
+    <span class="card__cta">Explorar →</span>
+  </div>
+</a>
+
+
           </div>
         </div>
       </section>
